# swagger-outputfile.json
@@ -40,6 +40,20 @@
     "application/json"
   ],
   "paths": {
+    "/auth/google": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/auth/google/callback": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
     "/api/user/{email}": {
       "get": {
         "tags": [
@@ -56,7 +70,7 @@
         ],
         "responses": {
           "200": {
-            "description": "User successfully obtained.",
+            "description": "User get successfully.",
             "schema": {
               "$ref": "#/definitions/User"
             }
@@ -147,7 +161,7 @@
         }
       }
     },
-    "/usersignup/": {
+    "/user-signup/": {
       "post": {
         "tags": [
           "User authentication"
@@ -173,7 +187,7 @@
         }
       }
     },
-    "/loginUser/": {
+    "/login-user/": {
       "post": {
         "tags": [
           "User authentication"
@@ -202,7 +216,7 @@
         }
       }
     },
-    "/resetPassword/": {
+    "/reset-password/": {
       "post": {
         "tags": [
           "Reset password"
@@ -228,7 +242,7 @@
         }
       }
     },
-    "/resetPassword/{userId}/{token}": {
+    "/reset-password/{userId}/{token}": {
       "post": {
         "tags": [
           "Reset password"
